--- a/Basics of js/index.html
+++ b/Basics of js/index.html
@@ -8,8 +8,13 @@
     <body>
         <h1>Section 2: JavaScript Language Basics</h1>
     </body>
-    <script src="js/main.js"></script>
+<!--    <script src="js/main.js"></script>-->
+<!--    <script src="js/variablemutationandtypeCorecsion.js"></script>-->
+<!--    <script src="js/BasicOperators.js"></script>-->
+    <script src="js/OperatorPrecedence.js"></script>
+<!--
     <script>
         console.log("Inline Script Called");
     </script>
+-->
 </html>
