--- a/Basics of js/index.html
+++ b/Basics of js/index.html
@@ -11,7 +11,8 @@
 <!--    <script src="js/main.js"></script>-->
 <!--    <script src="js/variablemutationandtypeCorecsion.js"></script>-->
 <!--    <script src="js/BasicOperators.js"></script>-->
-    <script src="js/OperatorPrecedence.js"></script>
+<!--    <script src="js/OperatorPrecedence.js"></script>-->
+    <script src="Jschallenge/firstChallenge.js"></script>
 <!--
     <script>
         console.log("Inline Script Called");
