--- a/Basics of js/index.html
+++ b/Basics of js/index.html
@@ -15,7 +15,8 @@
 <!--    <script src="js/function.js"></script>-->
 <!--    <script src="Jschallenge/firstChallenge.js"></script>-->
 <!--    <script src="Jschallenge/secondChallenge.js"></script>-->
-    <script src="Jschallenge/thirdChallenge.js"></script>
+<!--    <script src="Jschallenge/thirdChallenge.js"></script>-->
+    <script src="Jschallenge/fourthChallenge.js"></script>
 <!--
     <script>
         console.log("Inline Script Called");
