continue and break logic done

--- a/Basics of js/index.html
+++ b/Basics of js/index.html
@@ -12,11 +12,12 @@
 <!--    <script src="js/variablemutationandtypeCorecsion.js"></script>-->
 <!--    <script src="js/BasicOperators.js"></script>-->
 <!--    <script src="js/OperatorPrecedence.js"></script>-->
-<!--    <script src="js/function.js"></script>-->
+   <!-- <script src="js/function.js"></script> -->
+   <script src="js/continue-Break.js"></script>
 <!--    <script src="Jschallenge/firstChallenge.js"></script>-->
 <!--    <script src="Jschallenge/secondChallenge.js"></script>-->
 <!--    <script src="Jschallenge/thirdChallenge.js"></script>-->
-    <script src="Jschallenge/fourthChallenge.js"></script>
+    <!-- <script src="Jschallenge/fourthChallenge.js"></script> -->
 <!--
     <script>
         console.log("Inline Script Called");
