--- a/Basics of js/index.html
+++ b/Basics of js/index.html
@@ -6,7 +6,8 @@
     </head>
 
     <body>
-        <h1>Section 2: JavaScript Language Basics</h1>
+        <h1>JavaScript Language Basics</h1>
+        <h2>Basic Tasks And Challenges</h2>
     </body>
 <!--    <script src="js/main.js"></script>-->
 <!--    <script src="js/variablemutationandtypeCorecsion.js"></script>-->
