--- a/Basics of js/index.html
+++ b/Basics of js/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Section 2: JavaScript Language Basics</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Section 2: JavaScript Language Basics</title>
+  </head>
 
-    <body>
-        <h1>JavaScript Language Basics</h1>
-        <h2>Basic Tasks And Challenges</h2>
-    </body>
-<!--    <script src="js/main.js"></script>-->
-<!--    <script src="js/variablemutationandtypeCorecsion.js"></script>-->
-<!--    <script src="js/BasicOperators.js"></script>-->
-<!--    <script src="js/OperatorPrecedence.js"></script>-->
-   <!-- <script src="js/function.js"></script> -->
-   <!-- <script src="js/continue-Break.js"></script> -->
-<!--    <script src="Jschallenge/firstChallenge.js"></script>-->
-<!--    <script src="Jschallenge/secondChallenge.js"></script>-->
-<!--    <script src="Jschallenge/thirdChallenge.js"></script>-->
-    <!-- <script src="Jschallenge/fourthChallenge.js"></script> -->
-    <script src="Jschallenge/fifthChallenge.js"></script>
-<!--
+  <body>
+    <h1>JavaScript Language Basics</h1>
+    <h2>Basic Tasks And Challenges</h2>
+  </body>
+  <!-- <script src="js/main.js"></script> -->
+  <!-- <script src="js/variablemutationandtypeCorecsion.js"></script> -->
+  <!-- <script src="js/BasicOperators.js"></script> -->
+  <!-- <script src="js/OperatorPrecedence.js"></script> -->
+  <!-- <script src="js/function.js"></script> -->
+  <!-- <script src="js/continue-Break.js"></script> -->
+  <!-- <script src="Jschallenge/firstChallenge.js"></script> -->
+  <!-- <script src="Jschallenge/secondChallenge.js"></script> -->
+  <!-- <script src="Jschallenge/thirdChallenge.js"></script> -->
+  <!-- <script src="Jschallenge/fourthChallenge.js"></script> -->
+  <!-- <script src="Jschallenge/fifthChallenge.js"></script> -->
+  <!-- <script src="js/fullPRAC.JS"></script> -->
+  <script src="js/palindrom.js"></script>
+  <!--
     <script>
         console.log("Inline Script Called");
     </script>
--->
+  -->
 </html>
